--- a/_posts/2017-12-10-gp_pymc3.markdown
+++ b/_posts/2017-12-10-gp_pymc3.markdown
@@ -7,7 +7,7 @@ categories: Gaussian Processes Bayesian Non-parametric PyMC3
 ---
 The goal is to explore <b>Gaussian</b> process(GP) which are <b>Bayesian</b> <b>non-parametric</b> models, in the context of <b>regression</b> problems.
 
-Focusing on the terms in bold, the easiest to tackle is regression which you may already know given that you wanted to know more about Gaussian processes. In the most simplest terms, regression is used to model and predict continuous values. In our adventure with Gaussian process, we will be working on predicting winning times for olympic events(eg. 100m dash) given an year, learning a mapping between the two. 
+Focusing on the key terms, the easiest to tackle is regression which you may already know given that you wanted to know more about Gaussian processes. In the most simplest terms, regression is used to model and predict continuous values. In our adventure with Gaussian process, we will be working on predicting winning times for olympic events(eg. 100m dash) given an year, learning a mapping between the two. 
 
 <figure><center>
 <img src="/assets/100mds.png" alt="OlympicsDataset" title="Olympics 100m Mens"></center>
