--- a/_posts/2018-10-30-tragedy.markdown
+++ b/_posts/2018-10-30-tragedy.markdown
@@ -1,13 +1,13 @@
 ---
 layout: post
 comments: true
-title:  "Finally a Tragedy"
+title:  "&quot;Finally a Tragedy&quot;"
 date:   2018-10-30 01:12:31 +0530
 categories: Opinion Global 
 ---
 No other event in recent months has drawn more global attention than the death/murder of Saudi Arabian journalist [Jamal Khassoggi](https://en.wikipedia.org/wiki/Jamal_Khashoggi) in Turkey. As someone residing in Qatar at a [time](https://en.wikipedia.org/wiki/2017%E2%80%9318_Qatar_diplomatic_crisis) when such a news could potentially mean something greater, it's appropriate that I put a stamp on my thoughts here. 
 
-Before anything, I feel it's important that I locate the source of my opinion because it's less a deviation from the popular sentiment and more a description of my perspective. I'd like to use an anecdote from the Matrix movie which I'll try my best to keep self-contained. An important theme in the Matrix triology is about what constitutes reality and this is excellently conveyed when a member of the resistance against the A.I overlords become disillusioned with the seemingly hopeless fight and decides to betray his team in exchange for the virtual reality the A.I promises whereby his physical body is enslaved to power the A.I but his virtual avatar lives in a dimension where he can 'live on' with everything he'd desire. The person had a choice between realities and a question then is if he was wrong in abandoning ship and seeking a different reality? Overlooking the cowardice and betrayal aspect, I'd say there's nothing wrong in his actions and reality is subjective. However in retrospect, knowing how the movie ends, it's safe to say that the person made a poor decision believing the superiority of the A.I. In an alternate world, where the A.I got the upper hand (more probable imo), the person would be still alive while [The One](https://en.wikipedia.org/wiki/Neo_(The_Matrix)) and humanity would've met a much different fate. To sum up, I adhere to [Subjectivity](https://en.wikipedia.org/wiki/Subjectivity), to be more  specific, there's no right and wrong but only a cycle of decisions which are by itself so difficult to evaluate that it needs to be reduced to societally determined right and wrong to have a shot at maintaining harmony. Having laid out my cards (including Get out of Jail), I'd like to highlight two observations I found disturbing in the whole chain of events.
+Before anything, I feel it's important that I locate the source of my opinion because it's less a deviation from the popular sentiment and more a description of a perspective. I'd like to use an anecdote from the Matrix movie which I'll try my best to keep self-contained. An important theme in the Matrix triology is about what constitutes reality and this is excellently conveyed when a member of the resistance against the A.I overlords become disillusioned with the seemingly hopeless fight and decides to betray his team in exchange for the virtual reality the A.I promises whereby his physical body is enslaved to power the A.I but his virtual avatar lives in a dimension where he can 'live on' with everything he'd desire. The person had a choice between realities and a question then is if he was wrong in abandoning ship and seeking a different reality? Overlooking the cowardice and betrayal aspect, I'd say there's nothing wrong in his actions and reality is subjective. However in retrospect, knowing how the movie ends, it's safe to say that the person made a poor decision believing the superiority of the A.I. In an alternate world, where the A.I got the upper hand (more probable imo), the person would be still alive while [The One](https://en.wikipedia.org/wiki/Neo_(The_Matrix)) and humanity would've met a much different fate. To sum up, I adhere to [Subjectivity](https://en.wikipedia.org/wiki/Subjectivity), to be more  specific, there's no right and wrong but only a cycle of decisions which are by itself so difficult to evaluate that it needs to be reduced to societally determined right and wrong to have a shot at maintaining harmony. Having laid out my cards (including Get out of Jail), I'd like to highlight two observations I found disturbing in the whole chain of events.
 
 <h2>Wisdom of the Crowd</h2>
 If the above seems plausible at all, I would also claim that [Wisdom of the Crowd](https://en.wikipedia.org/wiki/Wisdom_of_the_crowd) is indispensable in the functioning of this world view. Since any decision is infinitely complex to evaluate, the best decision must be the one that's backed by the crowd. Note that I'm not alluding to Democracy which I'm opposed to at it's current state for several reasons that smarter men like [Aristotle](https://www.thoughtco.com/aristotle-on-democracy-111992), [Joseph Schumpeter](https://en.wikipedia.org/wiki/Capitalism,_Socialism_and_Democracy) and the likes have already theorized. The question of the hour is then about what constitutes a 'crowd' which is indeed a very difficult question. But we definitely get an anti-example from [Prince Mohammed Bin Salman's](https://en.wikipedia.org/wiki/Mohammad_bin_Salman) decisions so far which reveals a tale of amassing power and haste. A clear message in this tale is that not only does the Prince have a small crowd (solo?) but also actively tries to silence sources of wisdom which is a recipe for poor decisions that fuels itself. It's sad to see that the country that most represents a Muslim on the world stage regress to lows of humans rights violations. Nevertheless, I firmly believe in the Wisdom of the Crowd and its inherent auto correcting mechanism.    
